@@ -6,6 +6,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: Added CTRL+PrtSc to force immediate exit in SDL build.
   Unfortunately the Pause/Break key doesn't register in SDL. This
   functionality depends on build-time option BREAKONCTRLPRTSC.
+- System: Added some fixes to handle issues with the sdl12-compat
+  library.
 
 * V1.22.14 - 31 December 2022
 - System: Workaround for sdl12-compat library bug affecting keyboard input.
